# Match3Game

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  Match3Game.cpp  Match3Game.h  README.md  vcpkg.json
src/: Board.cpp  Board.h  Game.cpp  Game.h  Pos.h  Tile.cpp  Tile.h
src/Animations/: Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h  BonusAnimation.cpp  BonusAnimation.h  MoveAnimation.h  ScaleAnimation.h
src/Bonuses/: BombBonusStrategy.cpp  BombBonusStrategy.h  BonusGenerator.cpp  BonusGenerator.h  IBonusStrategy.h  PainterBonusStrategy.cpp  PainterBonusStrategy.h
